# delegate

./: .gitignore  CHANGELOG.md  README.md  flake.nix  hatch_build.py  main.py  migrate_now.py  playwright.config.ts  pyproject.toml  shell.nix  test_keyboard_shortcuts.js
.github/workflows/: ci.yml
.nix-uv/: pyvenv.cfg
benchmarks/: schema.md
benchmarks/tasks/: fix_off_by_one.yaml  implement_csv_reporter.yaml  refactor_config_module.yaml
boss/: agent.py  merge.py  orchestrator.py  paths.py  qa.py  repo.py  router.py  task.py  web.py
boss/charter/: constitution.md  continuous-improvement.md
delegate/: activity.py  agent.py  bootstrap.py  chat.py  cli.py  config.py  daemon.py  db.py  doctor.py  eval.py  fmt.py  lib.py  mailbox.py  merge.py  migrate_to_global.py  names.py  notify.py  orchestrator.py  paths.py  qa.py  repo.py  review.py  router.py  run.py  runtime.py  sim_boss.py  task.py  web.py  workflow.py
delegate/charter/: code-review.md  communication.md  continuous-improvement.md  manager.md  task-management.md  values.md
delegate/charter/roles/: engineer.md  manager.md
delegate/workflows/: __init__.py  core.py  default.py  git.py  standard.py
e2e/: chat-input-ux.spec.ts  chat.spec.ts  global-setup.ts  global-teardown.ts  keyboard-shortcuts.spec.ts  magic-commands.spec.ts  seed.py  smoke.spec.ts  task-panel.spec.ts  team-switcher.spec.ts  toast.spec.ts
frontend/: build.js  index.html  package-lock.json  package.json
frontend/src/: api.js  app.js  app.jsx  audio.js  commands.js  state.js  styles.css  toast.js  utils.js
frontend/src/components/: AgentsPanel.jsx  ChatPanel.jsx  CommandAutocomplete.jsx  CostBlock.jsx  DiffCommandBlock.jsx  DiffPanel.jsx  Header.jsx  HelpOverlay.jsx  ManagerActivityBar.jsx  NoTeamsModal.jsx  NotificationBell.jsx  NotificationPopover.jsx  ReviewableDiff.jsx  Sidebar.jsx  (+7 more)
headcount/: cli.py  config.py  qa.py  repo.py  task.py
myteam/.standup/: db.sqlite  roster.md
scripts/: agent.py  bootstrap.py  chat.py  eval.py  mailbox.py  orchestrator.py  qa.py  router.py  run.py  task.py  web.py
scripts/charter/: code-review.md  communication.md  constitution.md
shared/specs/: chat-styling-mockup.html
tests/: conftest.py  scenarios.md  test_agent_logging.py  test_agents_api.py  test_approval_api.py  test_bootstrap.py  test_chat.py  test_daemon_router.py  test_db.py  test_e2e.py  test_eval.py  test_files_api.py  test_mailbox.py  test_merge.py  test_merge_preview_api.py  test_notify.py  test_orchestration.py  test_qa.py  test_repo.py  test_scenarios_multiteam.py  test_scenarios_workflow.py  test_sim_boss.py  test_task.py  test_web_reject.py
(+587 files in other folders)
